<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Overflow items-->
    <item android:id="@+id/action_sort_date"
        android:title="@string/action_sort_date"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/action_sort_names"
        android:title="@string/action_sort_names"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/action_sort_visitors"
        android:title="@string/action_sort_visitors"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_date"
        android:icon="@drawable/sort_date"
        android:orderInCategory="100"
        android:title="@string/action_date_title"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>